fix: loading BCFIPS provider